add order fulfillment and status changing conditions
